# hashes

blake2/: Cargo.toml
blake2/src/: as_bytes.rs  blake2.rs  lib.rs
blake2/src/simd/: simdop.rs
