[package]
name = "blake2"
version = "0.8.1"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "BLAKE2 hash functions"
documentation = "https://docs.rs/blake2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.8"
byte-tools = "0.3"
crypto-mac = "0.7"
opaque-debug = "0.2"
wasm-bindgen = "0.2.58"

console_error_panic_hook = { version = "0.1.1", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }
crypto-mac = { version = "0.7", features = ["dev"] }
hex-literal = "0.1"

[features]
default = ["std", "console_error_panic_hook"]
std = ["digest/std", "crypto-mac/std"]
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
